feat: add vite svg plugin;

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="font_preload" style="opacity: 0">
     <span style="font-family: DINCondensedC"></span>
   </div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/vite-main.ts"></script>
   <!-- built files will be auto injected -->
 </body>
 
